--- a/src/fxml/Request.fxml
+++ b/src/fxml/Request.fxml
@@ -94,12 +94,12 @@
                                                         <Font size="24.0" />
                                                     </font>
                                                 </Label>
-                                                <JFXButton fx:id="createAPIbtn" onAction="#createPressedApi" prefHeight="50.0" prefWidth="150.0" text="Create" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                                                <JFXButton fx:id="createAPIbtn" onAction="#createPressedApi" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Create" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                                                     <GridPane.margin>
                                                         <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
                                                     </GridPane.margin>
                                                 </JFXButton>
-                                                <JFXButton fx:id="cancelAPIbtn" onAction="#cancelPressedAPI" prefHeight="50.0" prefWidth="150.0" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                                                <JFXButton fx:id="cancelAPIbtn" onAction="#cancelPressedAPI" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                                                     <GridPane.margin>
                                                         <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
                                                     </GridPane.margin>
@@ -127,7 +127,7 @@
                                                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                          </rowConstraints>
                                                          <children>
-                                                            <JFXTextField fx:id="startTextField" maxWidth="1.7976931348623157E308" prefHeight="40.0" promptText="Start Location" styleClass="text-on-dark" GridPane.hgrow="ALWAYS">
+                                                            <JFXTextField fx:id="startTextField" focusColor="#ffc93c" maxWidth="1.7976931348623157E308" prefHeight="40.0" promptText="Start Location" styleClass="text-on-dark" GridPane.hgrow="ALWAYS">
                                                                <GridPane.margin>
                                                                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                                </GridPane.margin>
@@ -214,7 +214,7 @@
                                                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                          </rowConstraints>
                                                          <children>
-                                                            <JFXTextField fx:id="endTextField" maxWidth="1.7976931348623157E308" prefHeight="40.0" promptText="End Location" styleClass="text-on-dark">
+                                                            <JFXTextField fx:id="endTextField" focusColor="#ffc93c" maxWidth="1.7976931348623157E308" prefHeight="40.0" promptText="End Location" styleClass="text-on-dark">
                                                                <font>
                                                                   <Font size="18.0" />
                                                                </font>
@@ -337,7 +337,7 @@
                                                     </font>
                                                 </Label>
                                                 <ChoiceBox fx:id="searchStrategyChoice" prefHeight="40.0" prefWidth="197.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                                                <JFXButton fx:id="saveSettingsButton" onAction="#saveSettingsPressed" text="Save" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                                                <JFXButton fx:id="saveSettingsButton" onAction="#saveSettingsPressed" styleClass="grey-button" text="Save" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
 
                                                     <font>
                                                         <Font size="20.0" />
@@ -354,7 +354,7 @@
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <JFXTextField fx:id="timeoutTextField" prefHeight="45.0" prefWidth="300.0" styleClass="text-on-dark" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                                    <JFXTextField fx:id="timeoutTextField" focusColor="#ffc93c" prefHeight="45.0" prefWidth="300.0" styleClass="text-on-dark" GridPane.columnIndex="2" GridPane.rowIndex="3">
                                        <GridPane.margin>
                                           <Insets left="50.0" right="50.0" />
                                        </GridPane.margin>
@@ -392,28 +392,28 @@
                                                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                                     </rowConstraints>
                                                                     <children>
-                                                                        <JFXTextField fx:id="usernameTxt" alignment="CENTER" focusColor="WHITE" labelFloat="true" promptText="Username" unFocusColor="WHITE" GridPane.columnIndex="1">
+                                                                        <JFXTextField fx:id="usernameTxt" alignment="CENTER" focusColor="#ffc93c" labelFloat="true" promptText="Username" unFocusColor="WHITE" GridPane.columnIndex="1">
                                                                             <font>
                                                                                 <Font size="24.0" />
                                                                             </font>
                                                                         </JFXTextField>
-                                                                        <JFXTextField fx:id="passwordTxt" alignment="CENTER" focusColor="WHITE" labelFloat="true" promptText="Password" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                                        <JFXTextField fx:id="passwordTxt" alignment="CENTER" focusColor="#ffc93c" labelFloat="true" promptText="Password" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                                                             <font>
                                                                                 <Font size="24.0" />
                                                                             </font>
                                                                         </JFXTextField>
-                                                                        <JFXTextField fx:id="jobTitletxt" alignment="CENTER" focusColor="WHITE" labelFloat="true" promptText="Job Title" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                                                        <JFXTextField fx:id="jobTitletxt" alignment="CENTER" focusColor="#ffc93c" labelFloat="true" promptText="Job Title" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                                                             <font>
                                                                                 <Font size="24.0" />
                                                                             </font>
                                                                         </JFXTextField>
-                                                                        <JFXTextField fx:id="fullNametxt" alignment="CENTER" focusColor="WHITE" labelFloat="true" promptText="Full Name" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                                                        <JFXTextField fx:id="fullNametxt" alignment="CENTER" focusColor="#ffc93c" labelFloat="true" promptText="Full Name" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                                                             <font>
                                                                                 <Font size="24.0" />
                                                                             </font>
                                                                         </JFXTextField>
-                                                                        <JFXButton fx:id="createStaffButton" onAction="#createStaffPressed" prefHeight="50.0" prefWidth="150.0" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-                                                                        <JFXButton fx:id="cancelStaffButton" onAction="#cancelStaffPressed" prefHeight="50.0" prefWidth="150.0" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                                                                        <JFXButton fx:id="createStaffButton" onAction="#createStaffPressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                                                                        <JFXButton fx:id="cancelStaffButton" onAction="#cancelStaffPressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
                                                       <JFXCheckBox fx:id="adminAddStaff" text="Admin?" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                                                          <font>
                                                             <Font size="24.0" />
@@ -445,7 +445,7 @@
                                                                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                                                     </rowConstraints>
                                                                                     <children>
-                                                                                        <JFXTextField fx:id="usernameDeleteTxt" alignment="CENTER" labelFloat="true" promptText="Username" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                                                                        <JFXTextField fx:id="usernameDeleteTxt" alignment="CENTER" focusColor="#ffc93c" labelFloat="true" promptText="Username" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                                                                                             <GridPane.margin>
                                                                                                 <Insets left="15.0" right="15.0" />
                                                                                             </GridPane.margin>
@@ -453,7 +453,7 @@
                                                                                                 <Font size="24.0" />
                                                                                             </font>
                                                                                         </JFXTextField>
-                                                                                        <JFXButton fx:id="removeStaffBtn" onAction="#removeStaffPressed" prefHeight="50.0" prefWidth="150.0" text="Remove Staff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                                                                        <JFXButton fx:id="removeStaffBtn" onAction="#removeStaffPressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Remove Staff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                                                                                             <GridPane.margin>
                                                                                                 <Insets left="20.0" right="20.0" />
                                                                                             </GridPane.margin>
@@ -463,7 +463,7 @@
                                                                                                 <Font size="24.0" />
                                                                                             </font>
                                                                                         </Label>
-                                                                  <JFXTextField fx:id="removeStaffFullName" alignment="CENTER" promptText="Full Name" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                                                  <JFXTextField fx:id="removeStaffFullName" alignment="CENTER" focusColor="#ffc93c" promptText="Full Name" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                                                      <GridPane.margin>
                                                                         <Insets left="15.0" right="15.0" />
                                                                      </GridPane.margin>
@@ -509,7 +509,7 @@
                                                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                                </rowConstraints>
                                                                <children>
-                                                                  <JFXTextField fx:id="usernameEdit" alignment="CENTER" labelFloat="true" promptText="Username" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                                                  <JFXTextField fx:id="usernameEdit" alignment="CENTER" focusColor="#ffc93c" labelFloat="true" promptText="Username" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                                                                      <GridPane.margin>
                                                                         <Insets left="15.0" right="15.0" />
                                                                      </GridPane.margin>
@@ -517,7 +517,7 @@
                                                                         <Font size="18.0" />
                                                                      </font>
                                                                   </JFXTextField>
-                                                                  <JFXButton fx:id="editStaff" onAction="#editStaffPressed" prefHeight="50.0" prefWidth="150.0" text="Edit Staff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+                                                                  <JFXButton fx:id="editStaff" onAction="#editStaffPressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Edit Staff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                                                                      <GridPane.margin>
                                                                         <Insets left="20.0" right="20.0" />
                                                                      </GridPane.margin>
@@ -527,7 +527,7 @@
                                                                         <Font size="18.0" />
                                                                      </font>
                                                                   </Label>
-                                                                  <JFXTextField fx:id="fullnameEdit" alignment="CENTER" labelFloat="true" promptText="Full Name" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                                                  <JFXTextField fx:id="fullnameEdit" alignment="CENTER" focusColor="#ffc93c" labelFloat="true" promptText="Full Name" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                                                      <GridPane.margin>
                                                                         <Insets left="10.0" right="10.0" />
                                                                      </GridPane.margin>
@@ -535,7 +535,7 @@
                                                                         <Font size="18.0" />
                                                                      </font>
                                                                   </JFXTextField>
-                                                                  <JFXTextField fx:id="passwordEdit" alignment="CENTER" labelFloat="true" promptText="Password" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                                                                  <JFXTextField fx:id="passwordEdit" alignment="CENTER" focusColor="#ffc93c" labelFloat="true" promptText="Password" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                                                                      <font>
                                                                         <Font size="18.0" />
                                                                      </font>
@@ -548,7 +548,7 @@
                                                                         <Font size="20.0" />
                                                                      </font>
                                                                   </JFXCheckBox>
-                                                                  <JFXTextField fx:id="jobTitleEdit" alignment="CENTER" labelFloat="true" promptText="Job Title" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                                                  <JFXTextField fx:id="jobTitleEdit" alignment="CENTER" focusColor="#ffc93c" labelFloat="true" promptText="Job Title" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                                                                      <GridPane.margin>
                                                                         <Insets left="15.0" right="15.0" />
                                                                      </GridPane.margin>
