--- a/src/fxml/FoodDelivery.fxml
+++ b/src/fxml/FoodDelivery.fxml
@@ -30,7 +30,7 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="alergiesTextFiled" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <JFXTextField fx:id="alergiesTextFiled" focusColor="#ffc93c" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="80.0" right="80.0" />
                </GridPane.margin>
