--- a/src/fxml/Translation.fxml
+++ b/src/fxml/Translation.fxml
@@ -30,7 +30,7 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="durationTextFiled" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <JFXTextField fx:id="durationTextFiled" focusColor="#ffc93c" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="80.0" right="80.0" />
                </GridPane.margin>
